--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/brunorecagno94/Obligatorio_Jap#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {}
+    "express": "^4.17.1",
+    "init": "^0.1.2"
+  }
 }
